--- a/index.html
+++ b/index.html
@@ -1,53 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-	<meta charset="utf-8">
-	<title>Bar Chart</title>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
-</head>
-<style>
-	#aaaa {
-		margin-top: 500px;
-	}
-	.bar {
-		fill: #00AcFF;
-	}
-	.bar:hover {
-		fill: orange;
-	}
-	.y.axis line,
-	.y.axis path {
-		fill: none;
-		stroke: #000;
-		stroke-width: 2px;
-	}
-	.x.axis line,
-	.x.axis path {
-		fill: none;
-		stroke: #000;
-		stroke-width: 2px
-	}
-</style>
-
-<body>
-	<div>
-		<div id="chart1">
-			<script src="js/barchart1.js"></script>
-		</div>
-		<div id="chart2">
-			<script src="js/barchart2.js"></script>
-		</div>
-		<div id="chart3">
-			<script src="js/groupedbarchart.js"></script>
-		</div>
-	</div>
-	<script src="UI-test/uitest.js"></script>
-</body>
-
-</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -56,7 +6,6 @@
 	<meta charset="utf-8">
 	<title>Bar Chart</title>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
-	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
 	<style>
@@ -96,8 +45,6 @@
 		expect = chai.expect;
 	</script>
 </head>
-
-
 <body>
 	<div id="mocha"></div>
 
@@ -128,4 +75,4 @@
 	}
 </script>
 
-</html>-->
+</html>
