doublt quotes changed to single quotes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = 'en'>
 
 <head>
 
-	<meta charset="utf-8">
+	<meta charset = 'utf-8'>
 	<title>Bar Chart</title>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+	<script src = 'http://d3js.org/d3.v3.min.js'></script>
+	<script src = 'https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.js'></script>
+	<script src = 'https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js'></script>
 	<style>
 	#aaaa {
 		margin-top: 500px;
@@ -46,22 +46,22 @@
 	</script>
 </head>
 <body>
-	<div id="mocha"></div>
+	<div id = 'mocha'></div>
 
-	<div id="bar"></div>
+	<div id = 'bar'></div>
 
 	<div>
-		<div id="chart1">
-			<script src="../js/barchart1.js"></script>
+		<div id = 'chart1'>
+			<script src = '../js/barchart1.js'></script>
 		</div>
-		<div id="chart2">
-			<script src="../js/barchart2.js"></script>
+		<div id = 'chart2'>
+			<script src = '../js/barchart2.js'></script>
 		</div>
-		<div id="chart3">
-			<script src="../js/groupedbarchart.js"></script>
+		<div id = 'chart3'>
+			<script src = '../js/groupedbarchart.js'></script>
 		</div>
 	</div>
-	<script src="UI-test/d3BarTest.js"></script>
+	<script src = 'UI-test/d3BarTest.js'></script>
 </body>
 <script>
 	if (window.mochaPhantomJS) {
