folder name changed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<script src = '../js/groupedbarchart.js'></script>
 		</div>
 	</div>
-	<script src = 'UI-test/d3BarTest.js'></script>
+	<script src = 'UI-Test/d3BarTest.js'></script>
 </body>
 <script>
 	if (window.mochaPhantomJS) {
