folder structure changed

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
 	<div>
 		<div id = 'chart1'>
-			<script src = '../js/barchart1.js'></script>
+			<script src = 'test/json/barchart1.js'></script>
 		</div>
 		<div id = 'chart2'>
-			<script src = '../js/barchart2.js'></script>
+			<script src = 'test/json/barchart2.js'></script>
 		</div>
 		<div id = 'chart3'>
-			<script src = '../js/groupedbarchart.js'></script>
+			<script src = 'test/json/groupedbarchart.js'></script>
 		</div>
 	</div>
-	<script src = 'UI-Test/d3BarTest.js'></script>
+	<script src = 'test/UI-Test/d3BarTest.js'></script>
 </body>
 <script>
 	if (window.mochaPhantomJS) {
