test files path changed

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
 	<div>
 		<div id = 'chart1'>
-			<script src = 'test/json/barchart1.js'></script>
+			<script src = 'test/barchart1.js'></script>
 		</div>
 		<div id = 'chart2'>
-			<script src = 'test/json/barchart2.js'></script>
+			<script src = 'test/barchart2.js'></script>
 		</div>
 		<div id = 'chart3'>
-			<script src = 'test/json/groupedbarchart.js'></script>
+			<script src = 'test/groupedbarchart.js'></script>
 		</div>
 	</div>
 	<script src = 'test/UI-Test/d3BarTest.js'></script>
