--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset = 'utf-8'>
 	<title>Bar Chart</title>
-	<script src = 'http://d3js.org/d3.v3.min.js'></script>
+	<script src = 'http://d3js.org/d3.v3.js'></script>
 	<script src = 'https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.js'></script>
 	<script src = 'https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js'></script>
 	<style>
