--- a/index.html
+++ b/index.html
@@ -1,78 +1,77 @@
 <!DOCTYPE html>
-<html lang = 'en'>
+<!DOCTYPE html>
+<html>
 
 <head>
-
-	<meta charset = 'utf-8'>
-	<title>Bar Chart</title>
-	<script src = 'http://d3js.org/d3.v3.js'></script>
-	<script src = 'https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.js'></script>
-	<script src = 'https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js'></script>
-	<style>
-	#aaaa {
-		margin-top: 500px;
-	}
-	.bar {
-		fill: #00AcFF;
-	}
-	.bar:hover {
-		fill: orange;
-	}
-	.y.axis line,
-	.y.axis path {
-		fill: none;
-		stroke: #000;
-		stroke-width: 2px;
-	}
-	.x.axis line,
-	.x.axis path {
-		fill: none;
-		stroke: #000;
-		stroke-width: 2px
-	}
-</style>
-	<script>
-		if (typeof initMochaPhantomJS === 'function') {
-
-			initMochaPhantomJS()
-
-		}
-
-		mocha.ui('bdd');
-
-		mocha.reporter('html');
-
-		expect = chai.expect;
-	</script>
+    <title></title>
+    <script src="http://d3js.org/d3.v3.js"></script>
+    <!--UI testing part-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+    <script>
+        if (typeof initMochaPhantomJS === 'function') {
+            initMochaPhantomJS()
+        }
+        mocha.ui('bdd');
+        mocha.reporter('html');
+        expect = chai.expect;
+    </script>
 </head>
+<!--style for barchart-->
+<style>
+    .bar {
+        fill: purple;
+    }
+
+    .bar:hover {
+        fill: brown;
+    }
+
+    .axis {
+        font: 15px Times New Roman;
+        font-weight: bold;
+    }
+
+    path {
+        stroke: steelblue;
+        stroke-width: 2;
+        fill: none;
+    }
+
+    .axis path,
+    .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+    }
+</style>
+<meta charset="utf-8">
+
 <body>
-	<div id = 'mocha'></div>
-
-	<div id = 'bar'></div>
-
-	<div>
-		<div id = 'chart1'>
-			<script src = 'js/barchart1.js'></script>
-		</div>
-		<div id = 'chart2'>
-			<script src = 'js/barchart2.js'></script>
-		</div>
-		<div id = 'chart3'>
-			<script src = 'js/groupedbarchart.js'></script>
-		</div>
-	</div>
-	<script src = 'UI-Test/d3BarTest.js'></script>
+    <div id="mocha"></div>
+    <!--Included script files to display graph-->
+    <div class="row">
+        <h1>Literacy Rate of North Eastern states</h1>
+        <div id="area1">
+            <script src="js/eduCategWise.js"></script>
+        </div>
+        <h1>Literacy Rate all over India</h1>
+        <div id="area2">
+            <script src="js/ageWiseLiterateDistribution.js"></script>
+        </div>
+        <h1>Statewise literacy rate</h1>
+        <div id="area3">
+            <script src="js/gradPopStateAndGradeWise.js"></script>
+        </div>
+    </div>
+    <script src="test/UI_Test/d3BarTest.js"></script>
 </body>
 <script>
-	if (window.mochaPhantomJS) {
-
-		mochaPhantomJS.run();
-
-	} else {
-
-		mocha.run();
-
-	}
+    if (window.mochaPhantomJS) {
+        mochaPhantomJS.run();
+    } else {
+        mocha.run();
+    }
 </script>
 
 </html>
